# Dashboard

./: README.md  dashboard.py  pipeline_credit.joblib  pyproject.toml  scoring.ipynb  test_df_dropna.csv
OC_P7/: pyproject.toml
OC_P7/tests/: test_oc_p7.py
mlflow_model_pyfunc/: MLmodel  python_env.yaml  python_model.pkl
pages/: 2_Risque_client.py  3_Analyse.py
