[tool.poetry]
name = "oc_p7"
version = "0.1.0"
description = ""
authors = ["Nihal-EF <elfahim.nihal@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.1"
scipy = "^1.8.1"
lightgbm = "^3.3.2"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
sklearn = "^0.0"
seaborn = "^0.11.2"
mlflow = "^1.26.1"
streamlit = "^1.10.0"
streamlit-echarts = "^0.4.0"
Js2Py = "^0.71"
lime = "^0.2.0"
mpld3 = "^0.5.8"
ipympl = "^0.9.1"
hyperopt = "^0.2.7"
pip = "^22.3.1"
bayesian-optimization = "^1.3.1"
xgboost = "^1.7.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
